--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -27,7 +27,7 @@
     <protected-broadcast android:name="com.android.systemui.doze.pulse" />
 
     <application
-        
+        android:label="@string/device_settings_app_name"
         android:persistent="true">
 
         <receiver android:name=".BootCompletedReceiver"
@@ -47,7 +47,7 @@
         <activity
             android:name=".DozeSettingsActivity"
             android:exported="false"
-            
+            android:label="@string/ambient_display_title"
             android:theme="@style/Theme.SubSettingsBase">
             <intent-filter>
                 <action android:name="org.lineageos.settings.device.DOZE_SETTINGS" />
